# yovi_en2a

./: .gitignore  README.md  docker-compose.yml  out.txt  package-lock.json  package.json  sonar-project.properties
.github/workflows/: build.yml  release-deploy.yml
docs/: index.adoc  package-lock.json  package.json
docs/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
game_manager/: Cargo.toml  Dockerfile
game_manager/src/: api_rest.rs  data.rs  firebase.rs  lib.rs  main.rs  redis_client.rs
game_manager/tests/: api_online_test.rs  api_test.rs  db_tests.rs  ranking_integration_tests.rs  redis_test.rs  server_tests.rs
game_manager/tests/common/: mod.rs
gamey/: Cargo.toml
gamey/src/: cli.rs
gamey/src/bot/: greedy.rs  minimax.rs  mod.rs
gamey/src/bot_server/: mod.rs  play.rs  req_res_formats.rs
gamey/src/core/: game.rs
gamey/src/notation/: yen.rs
gatling/: Dockerfile  pom.xml  run-load-tests.ps1
userAuthentification/: Cargo.toml  Dockerfile  entrypoint.sh
userAuthentification/src/: api_rest.rs  auth_utils.rs  firebase.rs  lib.rs  main.rs  user_auth.rs  user_data.rs
userAuthentification/tests/: auth_utils_tests.rs  db_tests.rs  user_auth_tests.rs
users/: openapi.yaml  package-lock.json  package.json  redis-client.js  users-service.js
users/__tests__/: users-service.test.js
webapp/: Dockerfile  index.html  nginx.conf  nginx.local.conf  package-lock.json  package.json  test_results.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webapp/src/: App.tsx  i18n.ts  vite-env.d.ts
webapp/src/__tests__/: AccountHelp.test.tsx  AccountSettings.test.tsx  App.test.tsx  AudioContext.test.tsx  AudioSettings.test.tsx  Board.test.tsx  CookieRetriever.test.ts  Game.test.ts  GameApi.test.ts  GameModeContainer.test.tsx  GameReplayWindow.test.tsx  GameSettings.test.tsx  GameWindow.test.tsx  GameWindowOnline.test.tsx  GameWindows.tsx  GlobalRanking.test.tsx  HexButton.test.tsx  LanguageSettingsPanel.test.tsx  LocalRanking.test.tsx  LoginForm.test.tsx  MainMenu.test.tsx  (+30 more)
(+132 files in other folders)
