[package]
name = "game_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
firestore = "0.47"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
uuid = { version = "1.21.0", features = ["v4"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.26"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
thiserror = "2.0.18"
serde_json = "1.0.146"


[dev-dependencies]
axum-test = "19.1.1"
serial_test = "3.0"
ctor = "0.6.3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "game_manager"
path = "src/main.rs"