[package]
name = "game_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
firestore = "0.47"
rustls = { version = "0.23", features = ["ring"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
uuid = { version = "1.21.0", features = ["v4"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "__rustls-ring"] }
thiserror = "2.0.18"
serde_json = "1.0.146"
rand = "0.8"
tower = "0.5.2"
ctor = "0.6.3"

[dev-dependencies]
serial_test = "3.0"

[[bin]]
name = "game_manager"
path = "src/main.rs"