[package]
name = "userAuthentification"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
argon2 = { version = "0.5", features = ["password-hash"] }
firestore = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

[dev-dependencies]
rand = "0.8"
serial_test = "3.4.0"
